Remove DUChain lock in AbstractNavigationWidget::anchorClicked()

I didn't asserts in other languages, but I also don't think any
of them actually does anything custom wrt navigation-widget.
BUG:365634